# agentcurl

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  benchmark.py  demo.py  demo.sh  demo.tape  pyproject.toml  requirements-local-cpu.txt  requirements.txt
.agentcurl/recipes/: en.wikipedia.org.json  example.com.json  www.xywy.com.json  www.youtube.com.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
mcp/: README.md  server.py
skill/: SKILL.md
src/agentcurl/: __init__.py  __main__.py  config.py  extract.py  fetch_utils.py  llm.py  login.py  manager.py  mcp.py  recipes.py  types.py
src/agentcurl/backends/: __init__.py  base.py  browser.py  crawl4ai_backend.py  firecrawl_backend.py  jina_backend.py  router.py  static.py
tests/: test_live.py  test_smoke.py
tests/fixtures/: article.html  page2.html
